--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Donations</title>
+    <title>ETP</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body class="fs-5">
-    <div class="container"><br />{% block content %} {% endblock %}</div>
+    {% include 'navbar.html' %}  
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
