--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{%url 'home'%}">Expense Tracker</a>
+        <a class="navbar-brand" href="{%url 'home'%}">Donate and Volunteer</a>
         <button
           class="navbar-toggler"
           type="button"
