--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,9 +10,16 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      .container {
+        padding-top: 50px;
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body class="fs-5">
-    {% include 'navbar.html' %} {% block content %}{% endblock %}
+    {% include 'navbar.html' %}
+    <div class="container">{% block content %}{% endblock %}</div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
