--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>heeey</h1>
     <h1>About US</h1>
+    <p>heey</p>
+    <h1>heeey</h1>
   </body>
 </html>
 {%endblock%}
