--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -4,31 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        margin-bottom: 10px;
+      }
+    </style>
   </head>
   <body>
-    <ul class="nav nav-pills nav-fill" style="background-color: whitesmoke">
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{%url 'home'%}"
-          >Kindred Spririts</a
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{%url 'home'%}">Kindred Spirits</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{%url 'about'%}">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-      </li>
-      <li class="nav-item">
-        <button class="btn btn-primary" style="margin-left: auto">
-          Register
+          <span class="navbar-toggler-icon"></span>
         </button>
-      </li>
-      <li class="nav-item">
-        <button class="btn btn-primary" style="margin-left: auto">Login</button>
-      </li>
-    </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{%url 'home'%}"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{%url 'about'%}"
+                >About Us</a
+              >
+            </li>
+            {%if user.is_authenticated%}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{%url 'home'%}"
+                >My Account</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{%url 'home'%}"
+                >Reports</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{%url 'home'%}"
+                >Budget</a
+              >
+            </li>
+            {%endif%}
+          </ul>
+        </div>
+      </div>
+      <div class="d-flex justify-content-end">
+        {%if user.is_authenticated%}
+        <a
+          href="{%url 'home'%}"
+          class="btn btn-outline-danger ms-auto btm-lg me-3"
+        >
+          Logout
+        </a>
+        {%else%}
+        <a href="{%url 'home'%}">
+          <button class="btn btn-outline-success ms-auto btm-lg me-3">
+            Register
+          </button></a
+        ><a href="{%url 'home'%}"
+          ><button class="btn btn-outline-primary float-end btm-lg">
+            LogIn
+          </button></a
+        >
+        {%endif%}
+      </div>
+    </nav>
   </body>
 </html>
